<resources>
    <string name="app_name">Calc-Vault</string>
    <string name="album_description">Album Name.(56)</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_albums">Albums</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Upload/Download from Google Drive</string>
    <string name="attachment_title">Upload/Download on Mobile Data</string>
    <string name="attachment_summary_on">Upload/Download on Mobile Data
    </string>
    <string name="attachment_summary_off">Only Upload/download on Wifi</string>
    <string name="number_of_songs">Number of Songs</string>
    <string name="options">Options</string>
    <string name="album_art_cover">Album Art Cover</string>
    <string name="delete">Permanently Delete</string>
    <string name="flaunt">Un-hide</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">LOVE MUSIC</string>
    <string name="backdrop_subtitle">This season top 20 albums</string>
    <string name="refresh">refresh</string>
    <string name="photos">Photos</string>
    <string name="videos">Videos</string>
    <string name="music">Music</string>
    <string name="recordings">Recordings</string>
    <string name="vpn">VPN</string>
    <string name="notes">Notes</string>
    <string name="documents">Documents</string>
    <string name="drive">GDrive</string>
    <string name="settings">Settings</string>
    <string name="ce">CE</string>
    <string name="open">(</string>
    <string name="close">)</string>
    <string name="divide">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="mul">*</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="dot">.</string>
    <string name="_0">0</string>
    <string name="equal">=</string>
    <string name="backspace">backspace</string>
    <string name="select">Select</string>
    <string name="create_new_folder">Create New Folder</string>
    <string name="name">Name</string>
    <string name="rename">Rename</string>
    <string name="add_new_photos">Add new Photos</string>
    <string name="textView">TextView</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Welcome to Calc-Vault!</string>
    <string name="slide_1_desc"> Calc-Vault is one Stop to Hide Everything you can!</string>

    <string name="slide_2_title">Please Give Permission to Access Your Files</string>
    <string name="slide_2_desc">We do not Steal/Take your Details Files
    Your Files are Stored in your Own Local Diretory
        and is Encrypted</string>
    <string name="loginDetails">Lets Sign You Up with your \n Own Google Account! \n Your Files are Safe, We never have access to it!</string>
    <string name="my_profile">My Profile</string>
    <string name="set_your_password">Set Your Password</string>
    <string name="info">For Example: if you set 6410. \nTo Unlock the vault, press 0/6410 in the Start Screen and press the Equal Sign to Login</string>
    <string name="already_have_vault">Already Have Vault?</string>
    <string name="clear">Clear</string>
    <string name="ok">OK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_music">Add Music</string>
    <string name="title_activity_notes">NotesActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_videos">Add Videos</string>
    <string name="something">something</string>
    <string name="vpn_on">VPN ON</string>
    <string name="vpn_off">VPN OFF</string>
    <string name="navigation_drawer_open">drawer open</string>
    <string name="navigation_drawer_close">drawer close</string>
    <string name="connect">Connect</string>
    <string name="connecting">Connecting</string>
    <string name="disconnect">Disconnect</string>
    <string name="connection_close_confirm">Would you like to cancel the current VPN Connection?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="choose_your_location">choose your location</string>
    <string name="press_mic">Press the mic button \n to start recording</string>
    <string name="kk">kk</string>
    <string name="hh">hh</string>
    <string name="_0_items_selected">0 items Selected</string>
    <string name="unhide">Unhide</string>
    <string name="un_hide">un-Hide</string>
    <string name="deletee">Delete</string>
    <string name="share">Share</string>
    <string name="add_new_videos">Add New Videos</string>
    <string name="un_hide_photos">Un-Hide</string>
    <string name="delete_photos">Delete</string>
    <string name="your_name">Your Name</string>
    <string name="your_password_for_your_zip_files">Your Password for your Zip Files.</string>
</resources>
